Fix to source letter-spacing
Line 1431 (from 5px to 3px)

--- a/style.css
+++ b/style.css
@@ -473,8 +473,6 @@ input[type="reset"].arrow-button {
 	
 }
 
-
-
 body.search-no-results #secondary .widget_search, body.error404 #secondary .widget_search	{
 	display: none;
 }
@@ -647,17 +645,17 @@ header .container {
     color: #fff;
     float: left;
     font-size: 45px;
-	letter-spacing: -3px;
+    letter-spacing: -3px;
     margin-right: 6px;
-	margin-top: -6px;
+    margin-top: -6px;
 }
 
 #schedule p.deal {
-	text-align: center;
-	border-right: 1px solid #41b1e3;
-	line-height: 1;
-	font-size: 16px;
-	padding-right: 7px;
+    text-align: center;
+    border-right: 1px solid #41b1e3;
+    line-height: 1;
+    font-size: 16px;
+    padding-right: 7px;
     margin-left: 7px;
 }
 
@@ -827,12 +825,6 @@ aside.widget:last-child {
 .insurance-logos img {
     padding: 10px;
 }
-
-/*
-.services-widget {
-    margin-top: -15px;
-}
-*/
 
 #secondary .services-widget .half img{
 	max-width: 60%;
@@ -1288,7 +1280,6 @@ h2.bucket-title {
 	margin-bottom: 15px;
 }
 
-
 .home-buckets .one_third.last {
 	border-right: 0px;
 }
@@ -1437,7 +1428,7 @@ section#testimonials .bx-viewport {
 	font-size: 21px;
 	font-weight: normal;
 	color: #7d868e;
-	letter-spacing: 5px;
+	letter-spacing: 3px;
 	}
 	
 #testimonial-block .source p {
